[gd_scene load_steps=8 format=3 uid="uid://c3s1xitives0i"]

[ext_resource type="Script" uid="uid://ce75pt6br386w" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Theme" uid="uid://bioe35ttt2ys0" path="res://Tema/pause_menu.tres" id="1_n87rw"]
[ext_resource type="Texture2D" uid="uid://dv2t86k0vc71m" path="res://assets/backgrounds/pause_background.png" id="2_kukqi"]
[ext_resource type="Texture2D" uid="uid://jfdvavo8mdjd" path="res://assets/menu/plate_menu_1.png" id="3_7l7mv"]
[ext_resource type="FontFile" uid="uid://drapyqg6uu0ga" path="res://assets/fonts/Retro Gaming.ttf" id="5_v4r4p"]
[ext_resource type="AudioStream" uid="uid://wur8gb3xen1s" path="res://assets/soundtrack/background_gameover.mp3" id="6_1s2dm"]
[ext_resource type="AudioStream" uid="uid://cslsb6w827ql3" path="res://assets/soundtrack/select_button.mp3" id="7_88e76"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_myx47")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579, 291)
scale = Vector2(0.759766, 0.759766)
texture = ExtResource("2_kukqi")

[node name="bg_over" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -4.0
offset_right = 7.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -44.5
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2

[node name="ResumePlate" type="Sprite2D" parent="menu_holder"]
position = Vector2(569.694, -15.3125)
scale = Vector2(0.348709, 0.348709)
texture = ExtResource("3_7l7mv")

[node name="pause_btn" type="Button" parent="menu_holder/ResumePlate"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -737.0
offset_top = -244.5
offset_right = -33.0
offset_bottom = -112.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n87rw")
theme_override_colors/icon_hover_color = Color(0.945098, 0.854902, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0.282353, 0.196078, 0.113725, 1)
theme_override_colors/font_color = Color(0.85098, 0.737255, 0.294118, 1)
theme_override_fonts/font = ExtResource("5_v4r4p")
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="ExitPlate" type="Sprite2D" parent="menu_holder"]
position = Vector2(569.694, 44.6875)
scale = Vector2(0.34847, 0.34847)
texture = ExtResource("3_7l7mv")

[node name="quit_btn" type="Button" parent="menu_holder/ExitPlate"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -745.0
offset_top = -244.5
offset_right = -36.0
offset_bottom = -112.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n87rw")
theme_override_colors/icon_hover_color = Color(0.945098, 0.854902, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0.282353, 0.196078, 0.113725, 1)
theme_override_colors/font_color = Color(0.85098, 0.737255, 0.294118, 1)
theme_override_fonts/font = ExtResource("5_v4r4p")
theme_override_font_sizes/font_size = 32
text = "QUIT GAME"

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1s2dm")
autoplay = true
parameters/looping = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_88e76")

[connection signal="pressed" from="menu_holder/ResumePlate/pause_btn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="menu_holder/ExitPlate/quit_btn" to="." method="_on_quit_btn_pressed"]
